--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
 
 .slider {
     height: 100vh;
+    box-shadow: inset 0 50px 50px #000, inset 0 -50px 50px #000;
 }
 
 .slider .slide {
@@ -32,51 +33,137 @@ body {
 
 .slide__content {
     text-align: center;
+    opacity: 0;
+    transition: opacity .25s ease;
+}
+
+.swiper-slide-active .slide__content {
+    opacity: 1;
 }
 
 .slide__content h2 {
-    font-size: calc(var(--index)*4);
+    font-size: calc(var(--index) * 4);
     text-transform: uppercase;
-    letter-spacing: calc(var(--index)*1.65);
-    margin-bottom: calc(var(--index)*2.3);
+    letter-spacing: calc(var(--index) * 1.65);
+    margin-bottom: calc(var(--index) * 2.3);
     position: relative;
 }
 .slide__content h2::after {
     content: '';
     height: 1px;
     width: 20%;
-    background-color: rgba(255 255 255 / .35)
+    background-color: rgba(255 255 255 / .35);
     position: absolute;
     left: 40%;
-    bottom: calc(var(--index)*-1);
+    bottom: calc(var(--index) * -1);
 }
 
 .slide__content p {
-    font-size: calc(var(--index)*.9);
+    font-size: calc(var(--index) * .9);
     text-transform: uppercase;
     color: rgba(255 255 255 / .8);
-    letter-spacing: calc(var(--index)*.24);
-    margin-bottom: calc(var(--index)*2.6);
+    letter-spacing: calc(var(--index) * .24);
+    margin-bottom: calc(var(--index) * 2.6);
 }
 
 button {
     --button-color: rgba(250 250 250 / .9);
     padding: 9.25px 40px;
-    font-size: 15.25;
+    font-size: 15.75px;
     border-radius: 10em;
     background-color: transparent;
     border: 2px solid var(--button-color);
     color: var(--button-color);
     text-transform: uppercase;
     letter-spacing: .2rem;
+    cursor: pointer;
+
 }
 
 .slider-navigation > * {
-    border: 1.5px solid #fff;
+    border: 1.5px solid var(--swiper-theme-color);
     border-radius: 10em;
     width: 55px;
     height: 55px;
-    --swiper-theme-color: #362f2f;
+}
 
+.video-background {
+    position: fixed;
+    width: 94%;
+    height: 94%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: .7;
+    transition: opacity 2s ease-out;
+}
+.video-background.change {
+    opacity: 1;
+}
+
+.header {
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+    padding: 1.7rem 0;
+}
+
+.container {
+    margin: auto;
+    max-width: 840px;
+}
+
+.container-top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__inner-logo {
+
+}
+
+.logo {
+    border: 3px solid #E1E6F7;
+	border-radius: 10em;
+	width: 54px;
+	height: 54px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity: .75;
+}
+
+.logo img {
+    width: 25px;
+    height: auto;
+}
+.header__inner-main-menu {
+
+}
+
+.main-menu {
+    display: flex;
+    margin-top: 15px;
+    font-size: 19px;
+    margin-right: -16px;
+}
+
+.main-menu a {
+    color: #bbbec9;
+    padding: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: none;
+    font-weight: 200;
+    outline: none;
+}
+
+.main-menu a:hover {
+    text-decoration: underline;
+}
+.main-menu li {
+    list-style: none;
+}
+
+li a {
 
 }
